Hello World Completed

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Learning node.js Mongo DB and Express.js from Coder dost ",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
